<resources>
    <string name="app_name">Rocas</string>
    <string name="btn_play">Jugar</string>
    <string name="btn_setting">Configuración</string>
    <string name="btn_exit">Salir</string>
    <string name="btn_info">Información</string>
    <string name="txt_info">El juego consiste en que hay rocas que se van moviendo y tenemos que dispararle. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla non dolor quam. Mauris odio lacus, eleifend sit amet ligula ut, vehicula euismod massa. Vivamus suscipit nibh nulla, sit amet aliquam massa faucibus et. Fusce ultrices tempor eros a posuere. Integer a purus lacinia, sodales enim vel, eleifend lorem. Aenean pharetra mattis semper. Donec semper libero eget lectus scelerisque lobortis. Aenean egestas tincidunt varius. Mauris non diam at augue convallis porta ac vel leo. Fusce ut nibh ex. Sed commodo metus vel dolor auctor, in dapibus leo malesuada. Duis dapibus, justo quis elementum ullamcorper, justo augue varius metus, a auctor nisi purus ac quam. Etiam eget sapien nulla. Integer sit amet ex quis massa euismod laoreet ac sagittis magna. Morbi congue accumsan. Mauris interdum odio velit, maximus elementum magna pellentesque et. Proin fermentum neque ut tellus pharetra efficitur. Aliquam et ante et orci posuere id eu urna. Aliquam ut metus quis nunc condimentum efficitur. Nunc in sagittis nisl. Aenean eget lacus sagittis, facilisis elit ut, sollicitudin mauris. Sed vel tempor nibh, eu tempor dolor. Praesent libero neque, porttitor ac blandit at, pulvinar non tellus.          In elementum dui vitae leo fringilla, et cursus magna cursus. In hac habitasse platea dictumst. Sed ex ligula, luctus a rhoncus eget, sagittis ac neque. Maecenas nec pellentesque elit, nec aliquet ante. Integer hendrerit, est vel ultricies ultrices, est sagittis sapien, quis auctor magna nunc eu sem. Pellentesque consectetur turpis vel consequat semper. Aliquam eget cursus magna, at placerat velit. Aliquam erat volutpat. Etiam posuere magna sed arcu consectetur, vestibulum condimentum nunc egestas.          Vestibulum laoreet purus libero, et maximus sem consectetur et. Aenean et blandit nulla. Mauris luctus, ex eget ullamcorper finibus, purus est maximus libero, ac aliquet eros ligula non tellus. Proin non sapien lorem. Nunc et sodales tellus, eu euismod velit. Nunc dictum porttitor ultrices. Maecenas a metus pretium, vehicula libero non, auctor erat. In dictum magna a mollis iaculis. Phasellus sed erat ut libero fermentum congue nec sed nulla. Maecenas molestie luctus neque id suscipit.          Aliquam eleifend magna nec massa bibendum, non pulvinar justo consequat. Donec malesuada sapien a iaculis scelerisque. Sed at augue vitae augue ultrices sagittis. Integer sapien tellus, laoreet vel libero ac, aliquet ultricies elit. Cras tempus quam sit amet maximus sodales. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed a auctor lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris sit amet euismod enim. Cras at pellentesque dui. Nam ullamcorper tincidunt quam non efficitur. Duis condimentum tellus sed eros efficitur, et tincidunt nisl feugiat. Suspendisse pulvinar urna sit amet pharetra venenatis. Nullam at mattis velit, sollicitudin auctor odio.          Integer quis ultricies nulla. Etiam dignissim sollicitudin ante ut rutrum. Curabitur a dui ipsum. Fusce ac pulvinar erat. Etiam pharetra ligula in neque cursus rhoncus. Nullam ut fringilla leo. Quisque nec viverra odio. Aliquam mollis est ac erat aliquet pellentesque. Sed feugiat felis lectus, sit amet pulvinar arcu varius ac. Etiam sollicitudin, tellus ut pretium consectetur, metus lectus molestie tortor, a semper felis libero ac lorem. Aliquam pretium, dolor quis lobortis dictum, tellus nunc scelerisque leo, et condimentum augue ante nec velit.          Aenean quis porta ante. Nullam quis lacus sed diam vestibulum volutpat. Curabitur convallis consectetur velit, id condimentum risus elementum et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras viverra rutrum eros, ac tincidunt nisl elementum at. Etiam fringilla justo sit amet semper bibendum. In condimentum, nisi vitae ornare sollicitudin, nulla neque sollicitudin mi, vitae commodo quam sem quis lectus. Curabitur eu pulvinar massa. Donec convallis nisl eget nisi dapibus, ut efficitur justo rutrum. Vivamus eleifend quis quam a tempor. Morbi quis augue justo. Etiam pretium laoreet accumsan. Proin libero ex, rutrum nec tincidunt ac, faucibus in tellus. Fusce quis sagittis neque, vitae maximus augue. Phasellus porta varius ornare. Curabitur quam augue, commodo a facilisis non, eleifend a lorem.          In eget pharetra nibh. Sed ipsum elit, varius sit amet quam vestibulum, tincidunt egestas nisl. Morbi finibus vitae purus at bibendum. Nulla pulvinar sem tincidunt dui egestas, in congue est lobortis. Cras quis sapien non urna facilisis ultricies non ac mi. Morbi ac leo et mi iaculis hendrerit. Curabitur vel lacus interdum, rutrum purus ac, vulputate massa. Morbi venenatis magna nec felis dignissim, a ornare augue luctus.</string>
    <string name="btn_volver">Volver</string>
    <string name="title_info">Esta es la información</string>
    <string name="opt_dont_exist">Esta opción aún no está disponible</string>
    <string name="search">Buscar</string>
    <string name="asteroide_desc">Asteroide rotando</string>
    <string name="label_add_photo">Agregar foto a tu perfil</string>
    <string name="take_photo">Tomar foto</string>
    <string name="photo_desc">Foto del perfil</string>
</resources>