<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/btn_play"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/btn_play" />

    <item
        android:id="@+id/btn_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/btn_setting" />

    <item
        android:id="@+id/btn_exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/btn_exit"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/btn_info" />

</menu>